<resources>
    <string name="app_name">Quiz5(CNN)</string>
    <string name="path">Home > Nasional > Peristiwa</string>
    <string name="title">Tanah Bergerak, 246 Rumah di Kabupaten Bogor Terdampak</string>
    <string name="company">CNN Indonesia</string>
    <string name="time">Senin, 19 Sep 2022 15:39 WIB</string>
    <string name="share">Bagikan: </string>
    <string name="img_desc">BNPB melaporkan pergerakan tanah terjadi di Kabupaten Bogor, Jawa Barat hingga membuat rusak 246 rumah warga (ANTARA FOTO/YULIUS SATRIA WIJAYA)</string>
    <string name="content">Jakarta, CNN Indonesia -- Badan Nasional Penanggulangan Bencana (BNPB) menyebut 246 rumah di Desa Bojong Koneng, Kecamatan Babakan Madang, Kabupaten Bogor, Jawa Barat terdampak fenomena pergerakan tanah.\n\nPlt. Kepala Pusat Data, Informasi dan Komunikasi Kebencanaan BNPB Abdul Muhari mengatakan sembilan unit rumah dinyatakan rusak berat dan 73 unit rumah rusak sedang. Hal itu menyebabkan 41 warga terpaksa harus mengungsi.\n\n"Terpaksa mengungsi ke dua titik lokasi yang lebih aman setelah tempat tinggal mereka mengalami kerusakan akibat adanya fenomena pergerakan tanah," kata Abdul dalam keterangan tertulisnya, Senin (19/9).\n\nDua lokasi yang menjadi tempat pengungsian itu meliputi Villa Roso, Kampung Curug, RT 02 RW 09 Desa Bojong Koneng, Kecamatan Babakan Madang dan Posko Badan Penanggulangan Bencana Daerah (BPBD) Kabupaten Bogor.\n\nMenurut assesmen sementara, fenonema pergerakan tanah dipicu oleh tingginya intensitas curah hujan pada Rabu (14/9). Laporan visual didapatkan beberapa ruas jalan mengalami kerusakan sehingga tidak dapat dilewati semua jenis kendaraan.\n\nAbdul mengatakan BPBD Kabupaten Bogor telah berkoordinasi dengan pihak-pihak terkait guna penyelamatan warga, pendataan dan melakukan upaya untuk meminimalisir kemungkinan terburuk.\n\nSementara itu, kata dia, listrik telah dipadamkan guna menghindari adanya hubungan arus pendek maupun hal lain yang tidak diinginkan. Jalan darurat juga sedang dibangun oleh swadaya masyarakat.\n\"Kondisi saat ini pergerakan tanah masih terjadi dan situasi masih belum kondusif," ucapnya.\n\nTerkait itu, dia mengingatkan hujan dengan intensitas sedang hingga tinggi masih berpotensi terjadi di wilayah Kabupaten Bogor. Hal itu mengacu pada prakiraan cuaca dari Badan Meteorologi Klimatologi dan Geofisika hingga Rabu (21/9).\n\n"BNPB mengimbau kepada masyarakat dan pemangku kebijakan di daerah setempat agar tetap waspada dan meningkatkan kesiapsiagaan," ujarnya.
</string>
</resources>