<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:paddingLeft="10dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/path"
                android:textColor="@color/grey_3"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:text="@string/title"
                android:textSize="28sp"
                android:textStyle="bold"

            <TextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/company"
                android:textSize="14sp"
                android:textColor="@color/cnn_red"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/time"
                android:textColor="@color/grey_1"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:text="@string/share"
                android:textSize="13sp"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:contentDescription="this is a image of a thing"
                app:srcCompat="@drawable/img" />

            <TextView
                android:id="@+id/img_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/img_desc"
                android:textColor="@color/grey_2"
                android:fontFamily="@font/cnn_sans"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/content"
                android:fontFamily="@font/cnn_sans"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>